--- a/bitrix/templates/main/css/screen.css
+++ b/bitrix/templates/main/css/screen.css
@@ -244,8 +244,6 @@ html {
 body {
   background-color: #fff;
   background-attachment: fixed;
-  -webkit-box-sizing: border-box;
-  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-font-smoothing: antialiased;
   -ms-font-smoothing: antialiased;
@@ -488,6 +486,23 @@ body, .out {
     .btn.primary:active {
       background-color: #439a7c;
       background-color: var(--color-primarya); }
+  .btn.filter-item {
+    border-color: #e6e6e6;
+    border-color: var(--color-hborder);
+    text-transform: uppercase; }
+    .btn.filter-item span {
+      color: #323232;
+      color: var(--color-textblk);
+      font-size: 0.75rem;
+      padding: 0.875rem 1.6875rem; }
+    .btn.filter-item.active {
+      border-color: #439a7c;
+      border-color: var(--color-primarya);
+      background-color: #439a7c;
+      background-color: var(--color-primarya); }
+      .btn.filter-item.active span {
+        color: #fff;
+        color: var(--color-white); }
 
 .text.blk {
   font-size: 1rem;
@@ -2325,7 +2340,8 @@ body, .out {
       background-color: var(--color-white);
       position: relative;
       padding: 1.6875rem 1.375rem 1.6875rem 1.6875rem;
-      min-height: 11.25rem; }
+      min-height: 11.25rem;
+      z-index: 0; }
       .news-item-content-inner:before {
         content: '';
         -webkit-box-shadow: 0px 10px 22px 0px rgba(68, 97, 119, 0.15);
@@ -4047,6 +4063,9 @@ a.text:active {
   max-width: 46.25rem; }
   .feedback-wrapper > .title {
     margin-bottom: 1.375rem; }
+  .feedback-wrapper .btn.light {
+    width: 100%;
+    margin-top: 1.5625rem; }
 
 .feedback-item {
   padding: 1.875rem 0 3.125rem;
@@ -4218,6 +4237,9 @@ a.text:active {
     .raiting .input-raiting:hover .input-raiting-checked {
       border-color: #d56c72;
       border-color: var(--color-secondary); }
+    .raiting .input-raiting:hover .like {
+      color: #d56c72;
+      color: var(--color-secondary); }
     .raiting .input-raiting-main {
       position: relative; }
     .raiting .input-raiting-real {
@@ -4237,6 +4259,9 @@ a.text:active {
         .raiting .input-raiting-real:checked + .input-raiting-checked:after {
           color: #fff;
           color: var(--color-white); }
+      .raiting .input-raiting-real:checked + .input-raiting-checked .like {
+        color: #fff;
+        color: var(--color-white); }
     .raiting .input-raiting-checked {
       color: #323232;
       color: var(--color-textblk);
@@ -4258,6 +4283,9 @@ a.text:active {
         vertical-align: middle;
         width: 0;
         height: 100%; }
+      .raiting .input-raiting-checked .like {
+        display: inline-block;
+        vertical-align: middle; }
       .raiting .input-raiting-checked:after {
         content: attr(data-text);
         display: inline-block;
@@ -4599,6 +4627,197 @@ a.text:active {
     margin: 0.25rem 0;
     display: block;
     font-weight: 600; }
+
+.organ-wrapper {
+  max-width: 43.125rem; }
+
+.organ-item {
+  font-size: 0;
+  padding-bottom: 4.6875rem;
+  border-bottom: 1px solid #e6e6e6;
+  border-bottom: 1px solid var(--color-hborder); }
+  .organ-item:not(:first-child) {
+    padding-top: 2.8125rem; }
+  .organ-item-img, .organ-item-content {
+    display: inline-block;
+    vertical-align: top;
+    min-height: 1px; }
+  .organ-item-img {
+    width: 9.0625rem;
+    margin-top: -0.3125rem; }
+    .organ-item-img img {
+      display: block;
+      max-width: 6.5625rem;
+      margin-right: auto; }
+  .organ-item-content {
+    width: -webkit-calc(100% - 9.0625rem);
+    width: calc(100% - 9.0625rem);
+    padding-top: 1.25rem; }
+    .organ-item-content .desc-wrap {
+      margin-right: 0;
+      max-width: 32.5rem; }
+    .organ-item-content .desc-item {
+      margin-top: 1.875rem;
+      margin-bottom: 0; }
+      .organ-item-content .desc-item .text.primary {
+        color: #323232;
+        color: var(--color-textblk);
+        font-weight: 500;
+        font-size: 0.875rem;
+        max-width: 12.5rem; }
+        .organ-item-content .desc-item .text.primary:not(:nth-child(2)) {
+          margin-top: 0.25rem; }
+      .organ-item-content .desc-item a.text.primary {
+        display: block; }
+        .organ-item-content .desc-item a.text.primary:hover {
+          color: #d56c72;
+          color: var(--color-secondary); }
+
+.form-element {
+  max-width: 46.25rem;
+  border: 1px solid #e6e6e6;
+  border: 1px solid var(--color-hborder);
+  padding: 1.875rem 2.5rem; }
+  .form-element + .feedback-wrapper {
+    margin-top: 4.375rem; }
+
+.filter-wrapper {
+  margin: 1.875rem 0; }
+
+.filter-item {
+  margin-top: 0.625rem;
+  margin-bottom: 0.625rem; }
+  .filter-item:not(:last-child) {
+    margin-right: 1.25rem; }
+
+.like {
+  max-width: 1.25rem;
+  max-height: 1.25rem; }
+  .like svg {
+    height: 100%;
+    max-height: 1.25rem;
+    overflow: visible; }
+  .like.nope {
+    -webkit-transform: scale(1, -1);
+    -ms-transform: scale(1, -1);
+    transform: scale(1, -1); }
+
+.search-element .link-dotted {
+  margin-top: 0.625rem; }
+
+.search-element-body > h3:first-child {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem; }
+
+.search-result-item {
+  padding: 2.1875rem 0 3.125rem;
+  display: block; }
+  .search-result-item:not(:first-child) {
+    border-top: 1px solid #e6e6e6;
+    border-top: 1px solid var(--color-hborder); }
+  .search-result-item-head {
+    display: table; }
+    .search-result-item-head .search-counter, .search-result-item-head .title {
+      display: table-cell; }
+    .search-result-item-head .search-counter {
+      font-size: 1.125rem;
+      font-weight: 400;
+      color: #000;
+      padding-right: 0.1875rem; }
+    .search-result-item-head .title b {
+      color: #d56c72;
+      color: var(--color-secondary); }
+  .search-result-item-content {
+    margin-top: 1.5625rem;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+    line-height: 1.7; }
+    .search-result-item-content b {
+      color: #d56c72;
+      color: var(--color-secondary);
+      -webkit-box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 #d56c72;
+      -webkit-box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 var(--color-secondary);
+      box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 #d56c72;
+      box-shadow: 0 -2px 0 0 #fff, 0 1px 0 0 var(--color-secondary); }
+
+.news-wrapper {
+  font-size: 0; }
+  .news-wrapper-head .filter-wrapper {
+    margin-top: 1.5625rem;
+    margin-bottom: 3.75rem; }
+  .news-wrapper-body {
+    margin-right: -1.875rem; }
+    .news-wrapper-body .news-item {
+      width: 33.33%;
+      margin-bottom: 3.125rem; }
+
+.addnews-wrap {
+  border-top: 1px solid #e6e6e6;
+  border-top: 1px solid var(--color-hborder);
+  padding-top: 2.5rem;
+  padding-bottom: 2.5rem; }
+
+.addnews-inner {
+  max-width: 63.3125rem;
+  margin-left: auto;
+  font-size: 0;
+  margin-right: -1.875rem; }
+
+.addnews-item {
+  display: inline-block;
+  vertical-align: top;
+  width: 50%;
+  padding-right: 1.875rem; }
+  .addnews-item:first-child .news-item-content-inner .text-sm {
+    padding-left: 0.625rem; }
+    .addnews-item:first-child .news-item-content-inner .text-sm:after {
+      right: 0;
+      left: 0;
+      -webkit-transform: scale(-1, 1);
+      -ms-transform: scale(-1, 1);
+      transform: scale(-1, 1); }
+  .addnews-item-inner {
+    display: block; }
+    .addnews-item-inner:hover .title {
+      color: #d56c72;
+      color: var(--color-secondary); }
+  .addnews-item .news-item-image, .addnews-item .news-item-content {
+    display: inline-block;
+    vertical-align: top;
+    margin-top: 0;
+    width: 50%; }
+  .addnews-item .news-item-image {
+    width: 45%; }
+  .addnews-item .news-item-content {
+    width: 55%; }
+  .addnews-item .news-item-content-inner {
+    padding-top: 0;
+    padding-right: 0;
+    padding-left: 1.25rem; }
+    .addnews-item .news-item-content-inner .text-sm {
+      text-transform: uppercase;
+      font-size: 0.625rem;
+      position: relative;
+      display: inline-block; }
+      .addnews-item .news-item-content-inner .text-sm:after {
+        width: 0.5rem;
+        height: 0.5rem;
+        content: '';
+        position: absolute;
+        top: 0.0625rem;
+        -webkit-transform: scale(1);
+        -ms-transform: scale(1);
+        transform: scale(1);
+        right: -0.625rem; }
+    .addnews-item .news-item-content-inner .title.h3 {
+      margin-bottom: 0.9375rem;
+      -webkit-transition: color 0.3s;
+      transition: color 0.3s; }
+  .addnews-item .news-item-image-inner {
+    max-width: 12.5rem; }
   @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
 
   * {
@@ -4646,6 +4865,16 @@ a.text:active {
   .btn.primary:hover {
     background-color: #5fab91;
     background-color: var(--color-primaryh); }
+
+  .btn.filter-item:hover {
+    background-color: #80baa6;
+    background-color: var(--color-primary);
+    border-color: #80baa6;
+    border-color: var(--color-primary); }
+
+  .btn.filter-item:hover span {
+    color: #fff;
+    color: var(--color-white); }
 
   .footer-links-main a:hover {
     color: #d56c72;
@@ -5072,6 +5301,10 @@ a.text:active {
 
   .content-wrapper h3 {
     margin: 2.8125rem 0 1.875rem; } }
+  @media only screen and (max-width: 850px) {
+
+  .news-wrapper-body .news-item {
+    width: 50%; } }
   @media only screen and (max-width: 820px) {
 
   .header-row-bottom {
@@ -5126,7 +5359,10 @@ a.text:active {
     z-index: 0; }
 
   .docsearch-head {
-    margin-bottom: 1.25rem; } }
+    margin-bottom: 1.25rem; }
+
+  .addnews-item {
+    width: 100%; } }
   @media only screen and (min-width: 768px) {
 
   .page__content::-webkit-scrollbar {
@@ -5211,7 +5447,23 @@ a.text:active {
     display: block;
     max-width: 800px;
     width: auto;
-    margin: 0 -0.625rem; } }
+    margin: 0 -0.625rem; }
+
+  .sitemap-wrap .footer-links-add {
+    display: inline-block;
+    width: 50% !important;
+    max-width: 50% !important; }
+
+  .sitemap-wrap .footer-links-main {
+    display: block;
+    width: 100%;
+    max-width: 100%;
+    margin-bottom: 1.25rem; }
+
+  .sitemap-wrap .footer-links-main li {
+    display: inline-block;
+    vertical-align: top;
+    width: 33.33%; } }
   @media only screen and (max-width: 735px) {
 
   .content-column-right {
@@ -5313,8 +5565,17 @@ a.text:active {
     overflow: hidden; }
 
   .vrach-raiting:after {
-    padding-top: 0.0625rem; } }
+    padding-top: 0.0625rem; }
+
+  ._404 {
+    padding-top: 0.9375rem; }
+
+  ._404 .link-back {
+    margin-top: 13.125rem; } }
   @media only screen and (max-width: 600px) {
+
+  .btn.filter-item span {
+    padding: 0.75rem 1.25rem; }
 
   .mainmenu-inner .box {
     -webkit-box-orient: horizontal;
@@ -5580,7 +5841,40 @@ a.text:active {
     width: 100%; }
 
   .partner-block-inner {
-    padding-bottom: 0.9375rem; } }
+    padding-bottom: 0.9375rem; }
+
+  .organ-item {
+    padding-bottom: 2.5rem; }
+
+  .organ-item:not(:first-child) {
+    padding-top: 1.5625rem; }
+
+  .organ-item-img {
+    width: 5.625rem;
+    margin-top: 0; }
+
+  .organ-item-img img {
+    max-width: 4.375rem; }
+
+  .organ-item-content {
+    width: -webkit-calc(100% - 5.625rem);
+    width: calc(100% - 5.625rem); }
+
+  .form-element {
+    padding: 1.25rem 1.25rem;
+    margin: 0 -0.625rem; }
+
+  .search-result-item {
+    padding: 1.25rem 0 1.875rem; }
+
+  .search-result-item-content {
+    -webkit-line-clamp: 4; }
+
+  .news-wrapper-head .filter-wrapper {
+    margin-top: 0; }
+
+  .news-wrapper-body .news-item {
+    width: 100%; } }
   @media only screen and (max-width: 550px) {
 
   .header-mainwrap .top-link.primary .dropdown-target {
